[package]
name = "Knot"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
libp2p = "0.56.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
