[package]
name = "Knot"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
dirs = "6.0.0"
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["tcp", "dns", "websocket", "noise", "yamux", "kad", "identify", "macros", "tokio", "quic", "request-response", "mdns", "relay", "dcutr", "ping"] }
libp2p-quic = { version = "0.13.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
